disable html background #fff #bug solves issue of body background getting covered over

--- a/normalize.css
+++ b/normalize.css
@@ -66,7 +66,7 @@ audio:not([controls]) {
  */
 
 html {
-    background: #fff; /* 1 */
+    /*background: #fff;*/ /* 1 */
     color: #000; /* 2 */
     font-family: sans-serif; /* 3 */
     -ms-text-size-adjust: 100%; /* 4 */
